# python-webserver

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml  startDocs.sh
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: package-lock.json  package.json
pythonserver/: main.py
scripts/aws/: README.md
scripts/setup/: update_poetry.sh
